--- a/css/Bakery.css
+++ b/css/Bakery.css
@@ -517,7 +517,7 @@ strong {
 
 /* Breadcrumbs */
 .breadcrumb-item a {
-    color: #007bff;
+    color: #1a1e21;
     text-decoration: none;
   }
   .breadcrumb-item a:hover {
@@ -527,7 +527,49 @@ strong {
     font-weight: bold;
   }
 
-
+/*HERO*/
+.hero-section {
+    background-image: url('../images/businessman-sitting-by-table-cafe.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+    padding-top: 50px;
+  }
+  
+  .hero-section::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    pointer-events: none;
+    background-color: rgba(0, 0, 0, 0.45);
+  }
+  
+  .hero-section .row {
+    position: relative;
+    z-index: 22;
+    top: 100px;
+  }
+  
+  .hero-image {
+    position: relative;
+    z-index: 2;
+    bottom: 100px;
+    display: block;
+    margin: auto;
+  }
+  
+  @media screen and (min-width: 991px) {
+    .hero-section {
+      height: calc(90vh - 88px);
+      padding-top: 350px;
+    }
+  }
+  
+/*table menu*/
 .food-table {
     width: 100%;
     border-collapse: collapse;
@@ -550,3 +592,355 @@ strong {
     border-radius: 5px;
 }
 
+/*contact*/
+.contact-section {
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0.45), rgba(188, 108, 37, 1)), url('../images/young-female-barista-wear-face-mask-serving-take-away-hot-coffee-paper-cup-consumer-cafe.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+  }
+  
+  .google-map {
+    border-radius: var(--border-radius-medium);
+    filter: grayscale(100);
+  }
+  
+  .contact-block-wrap {
+    background: var(--primary-color);
+    border-radius: var(--border-radius-medium);
+    padding: 0;
+    min-height: 200px;
+  }
+  
+  .contact-block {
+    background: var(--secondary-color);
+    border-radius: var(--border-radius-medium);
+    transform: rotate(8deg);
+    height: 100%;
+    padding: 20px 40px;
+  }
+  
+  .contact-block h6 {
+    transform: rotate(-8deg);
+  }
+  
+  .contact-block .custom-icon {
+    background: var(--primary-color);
+    border-radius: var(--border-radius-large);
+    display: block;
+    width: 50px;
+    height: 50px;
+    line-height: 50px;
+    text-align: center;
+    position: relative;
+  }
+  
+  .contact-block strong {
+    display: block;
+    color: var(--white-color);
+    text-transform: uppercase;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+
+/*costum form*/
+.custom-form .form-control {
+    color: var(--p-color);
+    border-radius: var(--border-radius-small);
+    margin-bottom: 30px;
+    padding-top: 13px;
+    padding-bottom: 13px;
+    box-shadow: none;
+    outline: none;
+    transition: all 0.3s;
+  }
+  
+  .custom-form .form-control:hover,
+  .custom-form .form-control:focus {
+    background: var(--primary-color);
+    border-color: transparent;
+  }
+  
+  .custom-form .form-label {
+    color: var(--white-color);
+    font-style: italic;
+    margin-bottom: 15px;
+  }
+  
+  .custom-form button[type="submit"] {
+    background: var(--custom-btn-bg-color);
+    border: none;
+    border-radius: var(--border-radius-large);
+    color: var(--white-color);
+    font-size: var(--form-btn-font-size);
+    font-weight: var(--font-weight-bold);
+    transition: all 0.3s;
+    margin-bottom: 0;
+  }
+  
+  .custom-form button[type="submit"]:hover,
+  .custom-form button[type="submit"]:focus {
+    background: var(--white-color);
+    border-color: transparent;
+    color: var(--primary-color);
+  }
+  
+  .contact-form .form-control,
+  .booking-form .form-control {
+    background-color: transparent;
+    border-color: rgba(255, 255, 255, 0.25);
+  }
+  
+  .booking-form .form-control {
+    color: var(--white-color);
+  }
+  
+  .custom-form input::-webkit-input-placeholder,
+  .custom-form textarea::-webkit-input-placeholder {
+     color: var(--white-color);
+  }
+  
+  .booking-form input:-moz-placeholder,
+  .booking-form textarea:-moz-placeholder {
+    color: var(--white-color);
+  }
+  
+  
+  /*---------------------------------------
+    SITE FOOTER              
+  -----------------------------------------*/
+  .site-footer {
+    background-color: var(--primary-color);
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+  
+  .site-footer strong {
+    color: var(--white-color);
+  }
+  
+  .site-footer p,
+  .site-footer-link {
+    color: rgba(255, 255, 255, 0.75);
+    font-size: var(--btn-font-size);
+  }
+  
+  .site-footer-link {
+    color: rgba(255, 255, 255, 0.75);
+    font-size: var(--btn-font-size);
+    transition: all 0.3s;
+  }
+  
+  .site-footer-link:hover {
+    color: rgba(255, 255, 255, 0.75);
+    text-decoration: underline;
+  }
+  
+  .copyright-text {
+    color: rgba(255, 255, 255, 0.75);
+    font-size: var(--menu-font-size);
+  }
+  
+  .copyright-text a {
+      color: rgba(255, 200, 160, 0.75);
+  }
+  
+  
+  /*---------------------------------------
+    SOCIAL ICON               
+  -----------------------------------------*/
+  .social-icon {
+    margin: 0;
+    padding: 0;
+  }
+  
+  .social-icon-item {
+    list-style: none;
+    display: inline-block;
+    vertical-align: top;
+  }
+  
+  .social-icon-link {
+    background: var(--primary-color);
+    border-radius: var(--border-radius-large);
+    color: var(--white-color);
+    font-size: var(--menu-font-size);
+    display: block;
+    margin: 0 5px;
+    text-align: center;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    transition: background 0.2s, color 0.2s;
+  }
+  
+  .social-icon-link:hover {
+    background: var(--white-color);
+    color: var(--primary-color);
+  }
+  
+  .social-icon-link span {
+    display: block;
+  }
+  
+  
+  /*---------------------------------------
+    RESPONSIVE STYLES               
+  -----------------------------------------*/
+  @media screen and (max-width: 1200px) {
+    h1 {
+      font-size: 62px;
+    }
+  }
+  
+  @media screen and (max-width: 991px) {
+    h1 {
+      font-size: 54px;
+    }
+  
+    h2 {
+      font-size: 36px;
+    }
+  
+    h3 {
+      font-size: 32px;
+    }
+  
+    h4 {
+      font-size: 28px;
+    }
+  
+    h5 {
+      font-size: 20px;
+    }
+  
+    h6 {
+      font-size: 18px;
+    }
+  
+    .section-padding {
+      padding-top: 50px;
+      padding-bottom: 50px;
+    }
+  
+    .hero-section {
+      padding-top: 148px;
+      padding-bottom: 100px;
+    }
+  
+    .navbar-brand,
+    .navbar-brand:hover {
+      font-size: var(--h5-font-size);
+    }
+  
+    .navbar-expand-lg .navbar-nav {
+      padding-bottom: 20px;
+    }
+  
+    .navbar-expand-lg .navbar-nav .nav-link {
+      padding: 0;
+      margin-bottom: 0;
+    }
+  
+    .navbar .custom-btn {
+      margin-bottom: 10px;
+    }
+  
+    .booking-form {
+      padding: 45px;
+    }
+  
+    .contact-section .container {
+      width: auto;
+      margin-right: 10px;
+      margin-left: 10px;
+      padding: 35px;
+    }
+  
+    .site-footer {
+      padding-top: 50px;
+      padding-bottom: 50px;
+    }
+  }
+  
+  @media screen and (max-width: 767px) {
+    .custom-btn {
+      font-size: 14px;
+      padding: 12px 20px;
+    }
+  
+    .menu-block-wrap,
+    .reviews-block-image-wrap,
+    .reviews-block-info {
+      padding: 20px;
+    }
+  }
+  
+  
+  @media screen and (max-width: 578px) {
+    .navbar .container,
+    .sticky-wrapper.is-sticky .container {
+      margin-right: 10px;
+      margin-left: 10px;
+    }
+  }
+  
+  
+  @media screen and (max-width: 480px) {
+    h1 {
+      font-size: 38px;
+    }
+  
+    h2 {
+      font-size: 28px;
+    }
+  
+    h3 {
+      font-size: 26px;
+    }
+  
+    h4 {
+      font-size: 22px;
+    }
+  
+    h5 {
+      font-size: 20px;
+    }
+  
+    .hero-section::after {
+      width: 200px;
+      height: 200px;
+    }
+  
+    .booking-form {
+      padding: 35px;
+    }
+  
+    .opening-hours-list li {
+      font-size: 12px;
+    }
+  
+    .reviews-block-image-wrap {
+      flex-direction: column;
+    }
+  
+    .reviews-block-image {
+      margin-bottom: 15px;
+    }
+  
+    .timeline-container {
+      padding-left: 55px;
+    }
+  
+    .timeline-container::before {
+      left: 44px;
+      border: medium solid white;
+      border-width: 15px 15px 15px 0;
+      border-color: transparent white transparent transparent;
+    }
+  
+    .timeline-container-left::before,
+    .timeline-container-right::before {
+      top: 13px;
+    }
+  }
